# discord-bot

./: .gitignore  README.md  create_dbs.sql  dbhelper.py  main.py  pyproject.toml  requirements.txt  tools.py
cogs/: command_hook.py  core.py  fun.py  fun_config.toml  help.py  moderation.py  ticket.py  ticket_system.py  verification.py  verification_system.py
database/: __init__.py  command_prefix_store.py  database.py  ticket_cooldown_store.py  ticket_request_store.py  ticket_settings_store.py  ticket_store.py  ticket_stores.py  verification_message_store.py  verification_request_store.py  verification_rule_message_store.py  verification_settings_store.py  verification_stores.py
database/migrations/: 0__create_dbs.sql
for_future_use/: message_log.py
migrations/: 0__create_dbs.sql  1__tmp.sql
slimbot/: __init__.py  config.py  slimbot.py  store.py  tools.py  utils.py
