[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["developerniki <114883451+developerniki@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.0"
aiosqlite = "^0.19.0"
"discord.py" = "^2.3.2"
emoji = "^2.7.0"
humanize = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
